<resources>
    <string name="app_name">ContactManager</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_contact">ScrollingActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Add / Edit Contact -->
    <string name="title_activity_add_contact">AddContact</string>
    <string name="add_contact_title">Add a contact</string>
    <string name="edit_contact_title">Edit contact</string>
    <string name="input_label_phone">Phone number:</string>
    <string name="input_label_lastname">Last name:</string>
    <string name="input_label_firstname">First name:</string>
    <string name="input_label_email">Email:</string>
    <string name="add_contact_submit_button">Add as a new contact</string>
    <string name="edit_contact_submit_button">Save contact information</string>

    <!-- About -->
    <string name="title_activity_about">About</string>
    <string name="about_text">
        "ContactManager app by Matiboux.\n"
        "http://matiboux.me/\n\n"

        "Project assignment at Griffith College for the Mobile Development module.\n"
        "https://gcd.ie/"
    </string>
    <string name="tap_picture_to_edit">Tap the picture to select a new one</string>
</resources>